TFP-6942: oppdater tester etter konstruktørendring i VelferdspermisjonDto
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>